--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Alan Anibal",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "c"
+  },
+  "keywords": [],
+  "dependencies": {
+    "inquirer": "^8.2.2"
+  }
 }
