--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "c"
+    "url": "https://github.com/alananibal/Professional-README-Generator.git"
   },
   "keywords": [],
   "dependencies": {
